Fix for categories sort on mobile.

--- a/moxie.css
+++ b/moxie.css
@@ -687,5 +687,5 @@ span.categories_list {
 }
 
 #categories_list { list-style-type: none; margin: 0; padding: 0; width: 80%; }
-#categories_list li { margin: 2px 3px 3px 2px; padding: 0.35em; padding-left: 1em; height: 2em; border: 1px #bbbbbb solid; border-radius: 5px; font-size: 18px;}
+#categories_list li { margin: 2px 3px 3px 2px; padding: 0.3em; padding-left: 1em; height: 2em; border: 1px #bbbbbb solid; border-radius: 5px; font-size: 18px;}
 #categories_list li span { position: relative; vertical-align: middle; }
